--- a/index.html
+++ b/index.html
@@ -78,23 +78,23 @@
     <button id="next-btn">Start</button>
   </div>
 
-  <script>
+ <script>
     const data = [
       { question: "face a complex problem", lp: "Dive Deep, evaluate metric and data", story: "Early Cancer" },
       { question: "find root cause of issue", lp: "Dive Deep, evaluate metric and data", story: "Early Cancer" },
       { question: "in-depth thought analysis", lp: "Dive Deep, evaluate metric and data", story: "Early Cancer" },
       { question: "issue you solved", lp: "Dive Deep, evaluate metric and data", story: "Early Cancer" },
       { question: "metric identified for a change", lp: "Dive Deep, evaluate metric and data", story: "Early Cancer" },
-      { question: "in tension – tight deadline or resource constraint", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
+      { question: "tension - deadline or resource", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
       { question: "overcoming unanticipated obstacle", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
       { question: "exceed expectation", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
       { question: "halfway realized goal is not aligned", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
       { question: "unachievable mission or goal", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
       { question: "did not manage well leading delay", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
       { question: "took something significant outside area", lp: "Ownership, scalable, long term, accept mistakes", story: "Ignition" },
-      { question: "were about to miss commitment", lp: "Ownership, scalable, long term, accept mistakes", story: "Ignition" },
+      { question: "were about to miss commitment", lp: "Ownership, scalable, long term, accept mistakes", story: "Facial Detection / Activa Finance" },
       { question: "initiative to impact whole company but wasn’t within under any group", lp: "Ownership, scalable, long term, accept mistakes", story: "Ignition" },
-      { question: "sacrifice short term gain for long term goal", lp: "Ownership, scalable, long term, accept mistakes", story: "Ignition" },
+      { question: "sacrifice short term gain for long term goal", lp: "Ownership, scalable, long term, accept mistakes", story: "Ignition / Komatsu" },
       { question: "transition project to new owner", lp: "Ownership, scalable, long term, accept mistakes", story: "Ignition" },
       { question: "peer struggling and decided to step in", lp: "Ownership, scalable, long term, accept mistakes", story: "Ignition" },
       { question: "needed deeper level of subject expertise", lp: "Learn and Be Curious", story: "Early Cancer" },
@@ -110,38 +110,26 @@
       { question: "respond immediately to situation", lp: "Bias for Action, quick decision", story: "Phable" },
       { question: "decide move forward or gather more info", lp: "Bias for Action, quick decision", story: "Phable" },
       { question: "proactive approach to create impact", lp: "Bias for Action, quick decision", story: "Phable" },
-      { question: "complex problem but simple solution", lp: "Invent and Simplify", story: "Ignition/Early Cancer" },
-      { question: "most innovative thing – why innovative?", lp: "Invent and Simplify", story: "Ignition/Early Cancer" },
-      { question: "simplify for customer", lp: "Invent and Simplify", story: "Ignition/Early Cancer" },
-      { question: "you influenced new innovation", lp: "Invent and Simplify", story: "Ignition/Early Cancer" },
-      { question: "issue usual approach won’t work", lp: "Invent and Simplify", story: "Ignition/Early Cancer" },
-      { question: "difficult interaction with customer", lp: "Customer Obsession, work backward, delight customer", story: "Activa Finance/RTR" },
-      { question: "above and beyond for customer", lp: "Customer Obsession, work backward, delight customer", story: "Activa Finance/RTR" },
-      { question: "anticipate customer need before they know", lp: "Customer Obsession, work backward, delight customer", story: "Activa Finance/RTR" },
-      { question: "asked customer feedback", lp: "Customer Obsession, work backward, delight customer", story: "Activa Finance/RTR" },
-      { question: "evaluated customer experience for your product", lp: "Customer Obsession, work backward, delight customer", story: "Activa Finance/RTR" },
-      { question: "unjustifiable customer demand which won’t address their need", lp: "Customer Obsession, work backward, delight customer", story: "Activa Finance/RTR" },
-      { question: "balance need of customers and needs of the business", lp: "Customer Obsession, work backward, delight customer", story: "Activa Finance/RTR" },
-      { question: "strongly disagree manager or peer", lp: "Have Backbone, disagree using data", story: "Phable/Warrant" },
-      { question: "unpopular stance", lp: "Have Backbone, disagree using data", story: "Phable/Warrant" },
-      { question: "commit to a disagreed decision", lp: "Have Backbone, disagree using data", story: "Phable/Warrant" },
-      { question: "felt strong but team went different direction", lp: "Have Backbone, disagree using data", story: "Phable/Warrant" },
-      { question: "pushed back against a negative decision", lp: "Have Backbone, disagree using data", story: "Phable/Warrant" },
-      { question: "great idea but team did not take it", lp: "Have Backbone, disagree using data", story: "Phable/Warrant" },
-      { question: "gain because you pushed for long time", lp: "Have Backbone, disagree using data", story: "Phable/Warrant" },
-      { question: "didn't have enough or right data", lp: "Are Right A Lot, ambiguity", story: "Ubitricity/Activa Finance" },
-      { question: "input from many sources", lp: "Are Right A Lot, ambiguity", story: "Ubitricity/Activa Finance" },
-      { question: "made a mistake (bad decision or bad idea or bad judgement)", lp: "Are Right A Lot, ambiguity", story: "Ubitricity/Activa Finance" },
-      { question: "need different perspective", lp: "Are Right A Lot, ambiguity", story: "Ubitricity/Activa Finance" },
-      { question: "communicate change in direction", lp: "Earn Trust, accept feedback", story: "RTR/Warrant" },
-      { question: "received critical feedback", lp: "Earn Trust, accept feedback", story: "RTR/Warrant" },
-      { question: "influence a peer with differing opinion", lp: "Earn Trust, accept feedback", story: "RTR/Warrant" },
-      { question: "not able to make commitment", lp: "Earn Trust, accept feedback", story: "RTR/Warrant" },
-      { question: "your team out of alignment with other team", lp: "Earn Trust, accept feedback", story: "RTR/Warrant" },
-      { question: "uncovered a significant problem in your team", lp: "Earn Trust, accept feedback", story: "RTR/Warrant" },
-      { question: "improve morale and productivity of your team", lp: "Earn Trust, accept feedback", story: "RTR/Warrant" },
-      { question: "peer struggling at work", lp: "Earn Trust, accept feedback", story: "RTR/Warrant" }
+      { question: "strongly disagree manager or peer", lp: "Have Backbone, disagree using data", story: "Phable" },
+      { question: "unpopular stance", lp: "Have Backbone, disagree using data", story: "Komatsu/Phable" },
+      { question: "commit to a disagreed decision", lp: "Have Backbone, disagree using data", story: "Warrant" },
+      { question: "felt strong but team went different direction", lp: "Have Backbone, disagree using data", story: "Warrant" },
+      { question: "pushed back against a negative decision", lp: "Have Backbone, disagree using data", story: "Phable" },
+      { question: "great idea but team did not take it", lp: "Have Backbone, disagree using data", story: "Warrant" },
+      { question: "gain because you pushed for long time", lp: "Have Backbone, disagree using data", story: "Komatsu" },
+      { question: "didn't have right data", lp: "Are Right A Lot, ambiguity", story: "Ubitricity" },
+      { question: "input from many sources", lp: "Are Right A Lot, ambiguity", story: "Ubitricity / Cancer / Komatsu" },
+      { question: "made a mistake (bad decision or bad idea or bad judgement)", lp: "Are Right A Lot, ambiguity", story: "Facial Detection / Activa Finance" },
+      { question: "need different perspective", lp: "Are Right A Lot, ambiguity", story: "Ubitricity" },
+      { question: "communicate change in direction", lp: "Earn Trust, accept feedback", story: "RTR" },
+      { question: "received critical feedback", lp: "Earn Trust, accept feedback", story: "Warrant / Activa Finance" },
+      { question: "influence a peer with differing opinion", lp: "Earn Trust, accept feedback", story: "Phable / Komatsu" },
+      { question: "not able to make commitment", lp: "Earn Trust, accept feedback", story: "Facial Detection / RTR" },
+      { question: "your team out of alignment with other team", lp: "Earn Trust, accept feedback", story: "Facial Detection / RTR" },
+      { question: "uncovered a significant problem in your team", lp: "Earn Trust, accept feedback", story: "Phable / Komatsu" },
+      { question: "improve morale and productivity of your team", lp: "Earn Trust, accept feedback", story: "Visby" }
     ];
+</script>
 
     let usedIndices = [];
     let currentStep = 0;
