--- a/index.html
+++ b/index.html
@@ -80,47 +80,47 @@
 
  <script>
     const data = [
-      { question: "face a complex problem", lp: "Dive Deep, evaluate metric and data", story: "Early Cancer" },
-      { question: "find root cause of issue", lp: "Dive Deep, evaluate metric and data", story: "Early Cancer" },
-      { question: "in-depth thought analysis", lp: "Dive Deep, evaluate metric and data", story: "Early Cancer" },
-      { question: "issue you solved", lp: "Dive Deep, evaluate metric and data", story: "Early Cancer" },
-      { question: "metric identified for a change", lp: "Dive Deep, evaluate metric and data", story: "Early Cancer" },
-      { question: "tension - deadline or resource", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
-      { question: "overcoming unanticipated obstacle", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
-      { question: "exceed expectation", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
-      { question: "halfway realized goal is not aligned", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
-      { question: "unachievable mission or goal", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
-      { question: "did not manage well leading delay", lp: "Deliver Results", story: "Komatsu / Facial Rec" },
-      { question: "took something significant outside area", lp: "Ownership, scalable, long term, accept mistakes", story: "Ignition" },
-      { question: "were about to miss commitment", lp: "Ownership, scalable, long term, accept mistakes", story: "Facial Detection / Activa Finance" },
-      { question: "initiative to impact whole company but wasn’t within under any group", lp: "Ownership, scalable, long term, accept mistakes", story: "Ignition" },
-      { question: "sacrifice short term gain for long term goal", lp: "Ownership, scalable, long term, accept mistakes", story: "Ignition / Komatsu" },
-      { question: "transition project to new owner", lp: "Ownership, scalable, long term, accept mistakes", story: "Ignition" },
-      { question: "peer struggling and decided to step in", lp: "Ownership, scalable, long term, accept mistakes", story: "Ignition" },
-      { question: "needed deeper level of subject expertise", lp: "Learn and Be Curious", story: "Early Cancer" },
-      { question: "you worked outside comfort zone", lp: "Learn and Be Curious", story: "Early Cancer" },
-      { question: "didn't know how to solve issue", lp: "Learn and Be Curious", story: "Early Cancer" },
-      { question: "you did something to improve overall work effectiveness", lp: "Learn and Be Curious", story: "Early Cancer" },
-      { question: "explored new area of existing space", lp: "Learn and Be Curious", story: "Early Cancer" },
-      { question: "someone challenged you to think differently", lp: "Learn and Be Curious", story: "Early Cancer" },
-      { question: "used external trends to improve product", lp: "Learn and Be Curious", story: "Early Cancer" },
-      { question: "calculated risk for speedy decision", lp: "Bias for Action, quick decision", story: "Phable" },
-      { question: "tight deadline to consider all options", lp: "Bias for Action, quick decision", story: "Phable" },
-      { question: "quick decision without manager", lp: "Bias for Action, quick decision", story: "Phable" },
-      { question: "respond immediately to situation", lp: "Bias for Action, quick decision", story: "Phable" },
-      { question: "decide move forward or gather more info", lp: "Bias for Action, quick decision", story: "Phable" },
-      { question: "proactive approach to create impact", lp: "Bias for Action, quick decision", story: "Phable" },
-      { question: "strongly disagree manager or peer", lp: "Have Backbone, disagree using data", story: "Phable" },
-      { question: "unpopular stance", lp: "Have Backbone, disagree using data", story: "Komatsu/Phable" },
-      { question: "commit to a disagreed decision", lp: "Have Backbone, disagree using data", story: "Warrant" },
-      { question: "felt strong but team went different direction", lp: "Have Backbone, disagree using data", story: "Warrant" },
-      { question: "pushed back against a negative decision", lp: "Have Backbone, disagree using data", story: "Phable" },
-      { question: "great idea but team did not take it", lp: "Have Backbone, disagree using data", story: "Warrant" },
-      { question: "gain because you pushed for long time", lp: "Have Backbone, disagree using data", story: "Komatsu" },
-      { question: "didn't have right data", lp: "Are Right A Lot, ambiguity", story: "Ubitricity" },
-      { question: "input from many sources", lp: "Are Right A Lot, ambiguity", story: "Ubitricity / Cancer / Komatsu" },
-      { question: "made a mistake (bad decision or bad idea or bad judgement)", lp: "Are Right A Lot, ambiguity", story: "Facial Detection / Activa Finance" },
-      { question: "need different perspective", lp: "Are Right A Lot, ambiguity", story: "Ubitricity" },
+        { question: "face a complex problem", story: "Cancer", lp: "Dive Deep\nEvaluate metric and data" },
+        { question: "find root cause of issue", story: "Cancer", lp: "Dive Deep\nEvaluate metric and data" },
+        { question: "in-depth thought analysis", story: "Cancer", lp: "Dive Deep\nEvaluate metric and data" },
+        { question: "Big problem you solved", story: "Cancer", lp: "Dive Deep\nEvaluate metric and data" },
+        { question: "metric identified for a change", story: "Cancer", lp: "Dive Deep\nEvaluate metric and data" },
+        { question: "tension - deadline or resource", story: "Komatsu", lp: "Deliver Results - in tension / exceed expectation" },
+        { question: "overcoming unanticipated obstacle", story: "Activa Finance", lp: "Deliver Results" },
+        { question: "exceed expectation", story: "Komatsu", lp: "Deliver Results" },
+        { question: "halfway realized goal is not aligned", story: "Komatsu", lp: "Deliver Results" },
+        { question: "unachievable mission or goal", story: "Ignition", lp: "Deliver Results" },
+        { question: "did not manage well leading delay", story: "Activa Finance", lp: "Deliver Results" },
+        { question: "Took something significant outside area", story: "Ignition", lp: "Ownership\noutside one responsibility, scalable, long term, accept mistakes" },
+        { question: "Were about to miss commitment", story: "Activa Finance", lp: "Ownership\noutside one responsibility, scalable, long term, accept mistakes" },
+        { question: "Initiative to impact whole company but wasn't within any group", story: "Ignition", lp: "Ownership\noutside one responsibility, scalable, long term, accept mistakes" },
+        { question: "Sacrifice short term gain for long term goal", story: "Komatsu", lp: "Ownership\noutside one responsibility, scalable, long term, accept mistakes" },
+        { question: "Transition project to new owner", story: "X", lp: "Ownership\noutside one responsibility, scalable, long term, accept mistakes" },
+        { question: "Peer struggling and decided to step in", story: "Visby", lp: "Ownership\noutside one responsibility, scalable, long term, accept mistakes" },
+        { question: "Needed deeper level of subject expertise", story: "Cancer", lp: "Learn and Be Curious" },
+        { question: "You worked outside comfort zone", story: "Cancer", lp: "Learn and Be Curious" },
+        { question: "Didn’t know how to solve issue", story: "Cancer", lp: "Learn and Be Curious" },
+        { question: "You did something to improve your overall work effectiveness", story: "Cancer", lp: "Learn and Be Curious" },
+        { question: "Explored new area of existing space", story: "Ignition", lp: "Learn and Be Curious" },
+        { question: "Someone challenged you to think differently", story: "Warrant", lp: "Learn and Be Curious" },
+        { question: "Used external trends to improve product", story: "Cancer", lp: "Learn and Be Curious" },
+        { question: "calculated risk for speedy decision, what steps to mitigate, what is the outcome", story: "Ubitricity", lp: "Bias for Action\nquick decision, not to consult others, take own decision" },
+        { question: "tight deadline to consider all options", story: "Phable", lp: "Bias for Action\nquick decision, not to consult others, take own decision" },
+        { question: "quick decision without manager", story: "Phable", lp: "Bias for Action\nquick decision, not to consult others, take own decision" },
+        { question: "respond immediately to situation", story: "Phable", lp: "Bias for Action\nquick decision, not to consult others, take own decision" },
+        { question: "decide move forward or gather more info", story: "Phable", lp: "Bias for Action\nquick decision, not to consult others, take own decision" },
+        { question: "fix an issue with proactive approach to create impact", story: "Phable", lp: "Bias for Action\nquick decision, not to consult others, take own decision" },
+        { question: "Strongly disagree manager or peer", story: "Phable", lp: "Have Backbone / Disagree / Commit - disagree using data for interest of company and commit if rejected" },
+        { question: "Unpopular stance", story: "Phable", lp: "Have Backbone / Disagree / Commit - disagree using data for interest of company and commit if rejected" },
+        { question: "Commit to a disagreed decision", story: "Warrant", lp: "Have Backbone / Disagree / Commit - disagree using data for interest of company and commit if rejected" },
+        { question: "Felt strong but team went different direction", story: "Warrant", lp: "Have Backbone / Disagree / Commit - disagree using data for interest of company and commit if rejected" },
+        { question: "Pushed back against a negative decision", story: "Phable", lp: "Have Backbone / Disagree / Commit - disagree using data for interest of company and commit if rejected" },
+        { question: "Great idea but team did not take it", story: "Warrant", lp: "Have Backbone / Disagree / Commit - disagree using data for interest of company and commit if rejected" },
+        { question: "Gain because you pushed for a long time", story: "Try fix Phable, alternatively go with Komatsu", lp: "Have Backbone / Disagree / Commit - disagree using data for interest of company and commit if rejected" },
+        { question: "didn’t have right data", story: "Ubitricity", lp: "Ambiguity/Uncertainty - try to find the data, try different approach or data, experience-based call, lacking experience then reach out for external perspective" },
+        { question: "input from many sources", story: "Ubitricity", lp: "Ambiguity/Uncertainty - try to find the data, try different approach or data, experience-based call, lacking experience then reach out for external perspective" },
+        { question: "made a mistake (bad decision or bad idea or bad judgement)", story: "Activa Finance", lp: "Ambiguity/Uncertainty - try to find the data, try different approach or data, experience-based call, lacking experience then reach out for external perspective" },
+        { question: "need different perspective", story: "Ubitricity", lp: "Ambiguity/Uncertainty - try to find the data, try different approach or data, experience-based call, lacking experience then reach out for external perspective" },
     ];
 
     let usedIndices = [];
